--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "@remix-run/serve": "^2.7.2",
     "@supabase/auth-helpers-remix": "^0.3.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@visx/axis": "^3.10.1",
+    "@visx/brush": "^3.10.4",
+    "@visx/grid": "^3.5.0",
+    "@visx/pattern": "^3.3.0",
+    "@visx/responsive": "^3.10.2",
+    "@visx/scale": "^3.5.0",
+    "@visx/tooltip": "^3.3.0",
+    "@visx/xychart": "^3.11.0",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.3.0",
     "d3": "^7.9.0",
     "isbot": "^3.8.0",
     "react": "^18.3.1",
